# mthesis-deep-lesion

./: README.md  pyproject.toml
notebooks/: metadata_eda.ipynb
src/data_prep/: batch_download_zips.py  delete_MAC_metadata.py  unzip_data.py
