[project]
name = "mthesis-deep-lesion"
version = "0.1.0"
description = "Mastet thesis using Deep Lesion dataset"
authors = [
    {name = "mireiafrt",email = "mireiafl105@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
